desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
/* ... */
.gtkstyle-fallback:disabled {
	background-color: @insensitive_bg_color;
	color: @insensitive_fg_color;
}

.gtkstyle-fallback:selected {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}

image,
image:disabled,
label,
label:disabled,
box,
box:disabled,
/*GtkGrid,
GtkGrid:disabled,*/
GtkImage,
GtkImage:disabled,
GtkLabel,
GtkLabel:disabled,
GtkBox,
GtkBox:disabled,
GtkGrid,
GtkGrid:disabled {
	background-color: transparent;
}

GtkFlowBox .grid-child {
	padding: 3px;
	border-radius: 3px; 
}

GtkFlowBox .grid-child:selected {
	outline-offset: -2px; 
}

textView,
GtkTextView {
	background-color: @theme_base_color; 
}

/************
 * Tooltips *
 ************/
tooltip {
	padding: 4px;
	border-style: solid;
	border-width: 1px;
	border-color: shade(@theme_tooltip_bg_color, 0.50);
	border-radius: 2px;
}

tooltip.background {
	background-color: @theme_tooltip_bg_color;
	color: @theme_tooltip_fg_color;
	text-shadow: none;
}

tooltip decoration {
    background-color: transparent;
}

tooltip * {
	background-color: transparent;
	color: @theme_tooltip_fg_color;
	padding: 4px;
}

/*********************
 * Spinner Animation *
 *********************/
/* This is could be CPU-intensive */

@keyframes spin {
	to { -gtk-icon-transform: rotate(1turn); }
}

spinner,
.spinner {
	background-image: none;
	background-color: blue;
	opacity: 0;
	-gtk-icon-source: -gtk-icontheme("process-working-symbolic");
}

spinner:active,
.spinner:active {
	opacity: 1;
	animation: spin 1s linear infinite;
}

spinner:active:disabled,
.spinner:active:disabled {
	opacity: 0.5;
}

button spinner:active,
.button .spinner:active {
	color: @theme_fg_color;
}

/*****************
 * Miscellaneous *
 *****************/
.view.rubberband,
.rubberband,
view rubberband,
rubberband {
	background-color: alpha (@theme_selected_bg_color, 0.35);

	border-color: @theme_selected_bg_color;
	border-style: solid;
	border-width: 1px;
	border-radius: 0px;
}

statusbar label,
statusbar frame.flat,
GtkStatusbar .label,
GtkStatusbar .frame.flat {
	color: @theme_fg_color;
	-GtkStatusbar-shadow-type: none;
}

statusbar frame.flat,
GtkStatusbar .frame.flat {
	padding: 1px;
	border-width: 0;
}

statusbar frame.flat button.flat,
GtkStatusbar .frame.flat .button.flat {
    padding: 0px;
}

.dnd {
	border-width: 1px;
	border-style: solid;
	border-color: @theme_selected_bg_color;
	border-radius: 0;
}

treeview view separator,
treeview separator,
separator,
separator:hover,
GtkTreeView.view.separator,
GtkTreeView.separator,
.separator,
.separator:hover {
	color: @view_separators;
	background-color: transparent;
}

.toolbar separator,
.toolbar .separator {
	/*color: @toolbar_separator;*/
	color: transparent;
}

.pane-separator {
	-GtkPaned-handle-size: 1;
	border-width: 0 1px 1px 1px;
	border-style: solid;
	border-color: @borders;
	background-color: @sidebar_bg;
	background-image: url("assets/null.png");
	color: @borders;
}

.pane-separator:hover,
.pane-separator:selected {
	color: @theme_text_color;
}

notebook .pane-separator,
notebook .pane-separator:hover,
.notebook .pane-separator,
.notebook .pane-separator:hover {
	background-color: @theme_base_color;
}

/************************
 * overshoot/undershoot *
 ************************/

/* displays at end of mouse scrolling */
.overshoot.top {
    background-image: -gtk-gradient(radial,
                                    center top, 0,
                                    center top, 0.5,
                                    to(@overshoot_bg_color),
                                    to(rgba(137, 158, 179, 0))),
                      -gtk-gradient(radial,
                                    center top, 0,
                                    center top, 0.6,
                                    from(rgba(56, 73, 87, 0.17)),
                                    to(rgba(56, 73, 87, 0)));
    background-size: 100% 5%, 100% 100%;
    background-repeat: no-repeat;
    background-position: center top;
    background-color: transparent;
    border: none;
    box-shadow: none;
}

.overshoot.top:backdrop {
    background-image: -gtk-gradient(radial,
                                    center top, 0,
                                    center top, 0.5,
                                    to(@overshoot_backdrop_bg_color),
                                    to(rgba(131, 137, 145, 0)));
    background-size: 100% 5%;
    background-repeat: no-repeat;
    background-position: center top;
    background-color: transparent;
    border: none;
    box-shadow: none;
}

.overshoot.bottom {
    background-image: -gtk-gradient(radial,
                                    center bottom, 0,
                                    center bottom, 0.5,
                                    to(@overshoot_bg_color),
                                    to(rgba(137, 158, 179, 0))),
                      -gtk-gradient(radial,
                                    center bottom, 0,
                                    center bottom, 0.6,
                                    from(rgba(56, 73, 87, 0.17)),
                                    to(rgba(56, 73, 87, 0)));
    background-size: 100% 5%, 100% 100%;
    background-repeat: no-repeat;
    background-position: center bottom;
    background-color: transparent;
    border: none;
    box-shadow: none;
}

.overshoot.bottom:backdrop {
    background-image: -gtk-gradient(radial,
                                    center bottom, 0,
                                    center bottom, 0.5,
                                    to(@overshoot_backdrop_bg_color),
                                    to(rgba(131, 137, 145, 0)));
    background-size: 100% 5%;
    background-repeat: no-repeat;
    background-position: center bottom;
    background-color: transparent;
    border: none;
    box-shadow: none;
}
/* ... */

